@@ -1,11 +1,9 @@
 package org.mtcg.db;
 
-import org.json.JSONException;
 import org.json.JSONObject;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -19,14 +17,17 @@ public class DbConnection {
   private static String PASSWORD;
 
   static {
-    try {
-      String content = new String(Files.readAllBytes(Paths.get("src/main/resources/db.json")));
+    try (InputStream inputStream = DbConnection.class.getClassLoader().getResourceAsStream("db/mtcg.json")) {
+      if (inputStream == null) {
+        throw new IllegalArgumentException("Database configuration file not found.");
+      }
+      String content = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
       JSONObject json = new JSONObject(content);
       DB_URL = json.getString("db_url");
       USER = json.getString("user");
       PASSWORD = json.getString("password");
       logger.info("Database configuration loaded successfully.");
-    } catch (IOException | JSONException e) {
+    } catch (Exception e) {
       logger.log(Level.SEVERE, "Error reading database configuration", e);
     }
   }
